Say "review feedback" instead of "please retry"

--- a/app/pieces/style.styl
+++ b/app/pieces/style.styl
@@ -6,6 +6,7 @@
     font-size 12px
   .piece-title
     margin 0px
+    margin-bottom 5px
   .piece-heading
     padding-top 5px
     padding-bottom 5px
@@ -13,4 +14,4 @@
     position relative
     top 17px
   .piece-era
-    margin-top -8px
+    margin-top -5px
