--- a/app/create_account/template.jade
+++ b/app/create_account/template.jade
@@ -1,5 +1,5 @@
 .guitar-quest-create-account.container
-  .col-xs-4.col-xs-offset-4
+  .col-xs-12.col-md-4.col-md-offset-4
     .create-account-panel.panel.panel-default
       .panel-body
         h4.text-center Create Free Account
