--- a/app/login/template.jade
+++ b/app/login/template.jade
@@ -1,5 +1,5 @@
 .guitar-quest-login.container
-  .col-xs-4.col-xs-offset-4
+  .col-xs-12.col-md-4.col-md-offset-4
     .login-panel.panel.panel-default
       .panel-body
         h4.text-center Login
