Enable sendgrid and add pricing page

--- a/local_modules/directives/gq_navbar/template.jade
+++ b/local_modules/directives/gq_navbar/template.jade
@@ -33,6 +33,8 @@
               a(ui-sref='guitarQuest.pendingPieces') Pending
 
           ul.nav.navbar-nav.navbar-right(ng-if='!navbarCtrl.isLoggedIn()')
+            li(ng-class="{active: navbarCtrl.stateIncludes('guitarQuest.pricing')}")
+              a(ui-sref='guitarQuest.pricing') Pricing
             li(ng-class="{active: navbarCtrl.stateIncludes('guitarQuest.login')}")
               a(ui-sref='guitarQuest.login') Login
             li(ng-class="{active: navbarCtrl.stateIncludes('guitarQuest.createAccount')}")
