--- a/app/review_submitted_piece/template.jade
+++ b/app/review_submitted_piece/template.jade
@@ -1,4 +1,4 @@
-.guitar-quest-piece.container
+.review-submitted-piece.container
   .panel.panel-default(ng-class='{"panel-warning": reviewPieceCtrl.userPiece.status === "pending", "panel-info": reviewPieceCtrl.userPiece.status === "retry", "panel-success": reviewPieceCtrl.userPiece.status === "finished"}')
     .piece-heading.panel-heading
       .row(ng-if='reviewPieceCtrl.userPiece.status === "unfinished"')
