--- a/local_modules/directives/gq_navbar/style.styl
+++ b/local_modules/directives/gq_navbar/style.styl
@@ -13,3 +13,8 @@
     font-size 12px
   .badge-warning
     background-color #FF9800
+  .credits-icon
+    margin-left 5px
+    font-size 19px
+    position relative
+    top 1px
