--- a/app/piece/style.styl
+++ b/app/piece/style.styl
@@ -10,9 +10,12 @@
   .video-preview
     width 550px
 
-  .link-btn
-    padding-top 9px
-    height 80px
+  .link-panel
+    height 100px
+
+  .link-panel-icon
+    margin-top 12px
+    margin-bottom 3px
 
   .loading
     height 250px
@@ -25,9 +28,8 @@
     padding-bottom 5px
 
   .select-video
-    height 250px
-    padding-top 65px
-    color gray
+    height 330px
+    padding-top 110px
     cursor pointer
 
     h5
@@ -40,6 +42,14 @@
 
   .control-btn
     margin-bottom 10px
+
+  .comment-details
+    margin-bottom -3px
+
   .comment
-    margin-bottom 10px
+    margin-top 15px
+    margin-bottom 15px
+
+  .piece-panel
+    margin-bottom 15px
 
