Some more restyling of the piece page

--- a/app/piece/style.styl
+++ b/app/piece/style.styl
@@ -8,7 +8,7 @@
     margin-right 15px
 
   .video-preview
-    width 550px
+    width 100%
 
   .link-panel
     height 100px
@@ -18,8 +18,7 @@
     margin-bottom 3px
 
   .loading
-    height 250px
-    padding-top 65px
+    padding-top 160px
     h5
       color gray
 
@@ -28,28 +27,26 @@
     padding-bottom 5px
 
   .select-video
-    height 330px
-    padding-top 110px
+    padding-top 140px
     cursor pointer
 
     h5
       color gray
 
   .piece-info
-    margin-bottom 13px // so it matches p tag
-  .piece-era
-    margin-top -3px
+    margin 10px // so it matches p tag
 
   .control-btn
     margin-bottom 10px
 
-  .comment-details
+  .history-item-details
     margin-bottom -3px
 
-  .comment
-    margin-top 15px
-    margin-bottom 15px
+  .history-item
+    margin-top 10px
 
   .piece-panel
     margin-bottom 15px
 
+  .video-panel-body
+    height 400px
