--- a/app/pieces/style.styl
+++ b/app/pieces/style.styl
@@ -15,3 +15,8 @@
     top 17px
   .piece-era
     margin-top -5px
+  .panel-progressbar
+    margin-bottom 0px
+  .panel-details
+    font-weight italic
+    margin-right 10px
