Show status after video uploaded

--- a/app/piece/style.styl
+++ b/app/piece/style.styl
@@ -50,3 +50,17 @@
 
   .video-panel-body
     height 400px
+
+  // .status
+  //   position absolute
+  //   top 0px
+  //   right 0px
+  //   width 100px
+  //   height 30px
+
+  .submission-status
+    margin-right 10px
+
+  .video-submission-heading
+    padding-top 5px
+    padding-bottom 5px
